--- a/conFusion/app/views/menu.html
+++ b/conFusion/app/views/menu.html
@@ -31,9 +31,9 @@
                     <ul class="media-list">
                         <li class="media" ng-repeat="dish in dishes | filter:filtText">
                             <div class="media-left media-middle">
-                                <a href="#">
+                                <a ui-sref="app.dishdetails({id: dish._id})">
                                 <img class="media-object img-thumbnail"
-                                 ng-src={{dish.image}} alt="Uthappizza">
+                                ng-src={{dish.image}} alt="Uthappizza">
                                 </a>
                             </div>
                             <div class="media-body">
